Refactor asset paths and remove unused files. Updated app.json to point to new public directory for icons and splash images. Deleted branding assets and removed unused constants for environment variables and image paths.

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "template-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./branding/icon.png",
+    "icon": "./public/icon.png",
     "scheme": "templateapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,7 +13,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./branding/adaptive-icon.png",
+        "foregroundImage": "./public/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
@@ -22,14 +22,14 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./branding/favicon.png"
+      "favicon": "./public/favicon.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./branding/splash-icon.png",
+          "image": "./public/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
