--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.12.1",
+    "react-native-svg-transformer": "^1.5.1",
     "react-native-unistyles": "^3.0.8",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
