--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lodash.memoize": "^4.1.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.62.0",
     "react-i18next": "^15.6.1",
     "react-native": "0.79.5",
     "react-native-edge-to-edge": "^1.6.2",
@@ -53,6 +54,7 @@
     "react-native-unistyles": "^3.0.8",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "zod": "^4.1.3",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
